force-app/main/default/objects/Meal__c/Meal__c.object-meta.xml
<CustomObject>
    <label>Meal</label>
    <nameField>
        <label>Meal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>