force-app/main/default/objects/Meal__c/fields/Calories__c.field-meta.xml
<CustomField>
    <fullName>Calories__c</fullName>
    <label>Calories</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>