force-app/main/default/objects/Meal__c/fields/Carbs_g__c.field-meta.xml
<CustomField>
    <fullName>Carbs_g__c</fullName>
    <label>Carbs (g)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>