force-app/main/default/objects/Meal__c/fields/Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Difficulty__c</fullName>
    <label>Difficulty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
                <default>true</default>
                <label>Easy</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Hard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>