force-app/main/default/objects/Meal__c/fields/Fiber_g__c.field-meta.xml
<CustomField>
    <fullName>Fiber_g__c</fullName>
    <label>Fiber (g)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>