force-app/main/default/objects/Meal__c/fields/Is_Diabetic_Friendly__c.field-meta.xml
<CustomField>
    <fullName>Is_Diabetic_Friendly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diabetic Friendly</label>
    <type>Checkbox</type>
</CustomField>