force-app/main/default/objects/Meal__c/fields/Is_Heart_Healthy__c.field-meta.xml
<CustomField>
    <fullName>Is_Heart_Healthy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heart Healthy</label>
    <type>Checkbox</type>
</CustomField>