force-app/main/default/objects/Meal__c/fields/Is_Weeknight_Friendly__c.field-meta.xml
<CustomField>
    <fullName>Is_Weeknight_Friendly__c</fullName>
    <formula>Total_Time_Minutes__c &lt;= 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Weeknight Friendly</label>
    <type>Checkbox</type>
</CustomField>