force-app/main/default/objects/Meal__c/fields/Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Used_Date__c</fullName>
    <inlineHelpText>Date this meal was last used in a meal plan. Used to track 30-day no-repeat rule.</inlineHelpText>
    <label>Last Used Date</label>
    <type>Date</type>
</CustomField>