force-app/main/default/objects/Meal__c/fields/Prep_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Prep_Time_Minutes__c</fullName>
    <label>Prep Time (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>