force-app/main/default/objects/Meal__c/fields/Protein_g__c.field-meta.xml
<CustomField>
    <fullName>Protein_g__c</fullName>
    <label>Protein (g)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>