force-app/main/default/objects/Meal__c/fields/Protein_Type__c.field-meta.xml
<CustomField>
    <fullName>Protein_Type__c</fullName>
    <label>Protein Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chicken</fullName>
            </value>
            <value>
                <fullName>Beef</fullName>
            </value>
            <value>
                <fullName>Pork</fullName>
            </value>
            <value>
                <fullName>Fish/Seafood</fullName>
            </value>
            <value>
                <fullName>Turkey</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Eggs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>