force-app/main/default/objects/Meal__c/fields/Recipe_Content__c.field-meta.xml
<CustomField>
    <fullName>Recipe_Content__c</fullName>
    <label>Recipe Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>