force-app/main/default/objects/Meal__c/fields/Sodium_mg__c.field-meta.xml
<CustomField>
    <fullName>Sodium_mg__c</fullName>
    <label>Sodium (mg)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>