force-app/main/default/objects/Meal__c/fields/Sugar_g__c.field-meta.xml
<CustomField>
    <fullName>Sugar_g__c</fullName>
    <label>Sugar (g)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>