force-app/main/default/objects/Meal__c/fields/Total_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Minutes__c</fullName>
    <formula>Cook_Time_Minutes__c + Prep_Time_Minutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>