force-app/main/default/objects/Meal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Meal_Type__c</columns>
    <columns>Is_Weeknight_Friendly__c</columns>
    <columns>Total_Time_Minutes__c</columns>
    <columns>Recipe_Content__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>